--- a/dos33.html
+++ b/dos33.html
@@ -2102,7 +2102,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     181 ; EVAR - VERIFY A FILE
                     182 ;
                     183 <a class='f' name='EVAR'     >EVAR        </a>EQU *
-                    184             LDA #CRQVAR         ; SET VARIFY                ; *spelling* <i>Damnit, Jim, I wish you VARIFY your spelling</i>
+                    184             LDA #CRQVAR         ; SET VARIFY                ; *spelling* <i>Damnit, Jim, I wish you would VARIFY your spelling.</i>
                     185             BNE ELGO
                     186             PAGE
                     187 ;
