--- a/dos33.html
+++ b/dos33.html
@@ -1276,26 +1276,26 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1D89:4A             099             LSR A                                           ;          but who would want that? Isn't it <i>obvious</i> that
 1D8A:4A             100             LSR A                                           ;          CS means Current Slot * 16 !?
 1D8B:8D 6A 2A       101             STA <a class='v' href='#CS'>CS</a>          ; SET AS CUURENT SLOT           ; *spelling* CURRENT
-1D8E:AD EA 37       102             LDA IBDRVN      ; GET BOOT DRIVE NUMBER
-1D91:8D 68 2A       <a class='line' name='DOSINIT.103'>103</a>             STA CD          ; SET AS CURRENT DRIVE
-1D94:AD 00 E0       104             LDA AITSTL      ; GET APPLESOFT/IB TEST
-1D97:49 20          105             EOR #ITSTV      ; IF AS THEN
-1D99:D0 11          106             BNE IAS1        ; GO TO AS INIT                 ; 
+1D8E:AD EA 37       102             LDA <a class='v' href='#IBDRVN'>IBDRVN</a>      ; GET BOOT DRIVE NUMBER
+1D91:8D 68 2A       <a class='line' name='DOSINIT.103'>103</a>             STA <a class='v' href='#CD'>CD</a>          ; SET AS CURRENT DRIVE
+1D94:AD 00 E0       104             LDA <a class='v' href='#AITSTL'>AITSTL</a>      ; GET APPLESOFT/IB TEST
+1D97:49 20          105             EOR #<a class='v' href='#ITSTV'>ITSTV</a>      ; IF AS THEN
+1D99:D0 11          106             BNE <a class='x' href='#IAS1'>IAS1</a>        ; GO TO AS INIT                 ; 
                     107 ;                           ; ELSE INIT FOR IB
-1D9B:8D B6 2A       108             STA ASIBSW      ; SET SW FOR IB                 ; <a class='magic' name='#_'>magic number</a> BASIC_TYPE_INTEGER = $00
+1D9B:8D B6 2A       108             STA <a class='v' href='#ASIBSW'>ASIBSW</a>      ; SET SW FOR IB                 ; <a class='magic' name='#_'>magic number</a> BASIC_TYPE_INTEGER = $00
                                                                                     ;        30 = $1D9E .. $1DBB
                                                                                     ;        -5 = Don't count opcodes at Lines #117,118
                                                                                     ;       -18 = Replacement code at Line <a class='link' href='#DOSINIT.118.Solution'>118 Solution</a>
-1D9E:A2 0A          <a class='line' name='DOSINIT.109'>109</a>             LDX #IBVTL      ; GET IB VT LENGTH              ; <a class='mem' name='_1D9E'>wastes</a> =7 bytes
-1DA0:BD 61 1D       110 IIB1        LDA IBVT-1,X    ; MOVE IB ADDR                  ; <b>Problem</b>: *sigh* due to IBVTL=$A != AS1VTL=$C
-1DA3:9D 55 1D       111             STA IBASVT-1,X                                  ;           we end up with <i>duplicate code</i> (**9 times**, er, 3 times!) to
+1D9E:A2 0A          <a class='line' name='DOSINIT.109'>109</a>             LDX #<a class='v' href='#IBVTL'>IBVTL</a>      ; GET IB VT LENGTH              ; <a class='mem' name='_1D9E'>wastes</a> =7 bytes
+1DA0:BD 61 1D       110 IIB1        LDA <a class='v' href='#IBVT'>IBVT</a>-<span class='n'>1</span>,X    ; MOVE IB ADDR                  ; <b>Problem</b>: *sigh* due to IBVTL=$A != AS1VTL=$C
+1DA3:9D 55 1D       111             STA <a class='v' href='#IBASVT'>IBASVT</a>-<span class='n'>1</span>,X                                  ;           we end up with <i>duplicate code</i> (**9 times**, er, 3 times!) to
 1DA6:CA             112             DEX                                             ;           copy the BASIC Vector Table! (An array of function pointers)
-1DA7:D0 F7          113             BNE IIB1                                        ;
-1DA9:4C BC 1D       114             JMP INITAA                                      ; normally <a class='mem' name='#_1DA9'>wastes</a> 1 byte, BEQ INITAA; but see bigger optimization on Line #<a class='line' href='#DOSINIT.109'>109</a>
+1DA7:D0 F7          113             BNE <a class='x' href='#IIB1'>IIB1</a>                                        ;
+1DA9:4C BC 1D       114             JMP <a class='x' href='#INITAA'>INITAA</a>                                      ; normally <a class='mem' name='#_1DA9'>wastes</a> 1 byte, BEQ INITAA; but see bigger optimization on Line #<a class='line' href='#DOSINIT.109'>109</a>
                     115 ;
                     116 IAS1        EQU *                                           ; IAS1 = Init Applesoft ROM; /cynical "<i>There will be a test</i>"
 <hr>1DAC:A9 40          117             LDA #$<span class='n'>40</span>        ; INDICATE ROM APPLESOFT        ; === Page <a class='page' name='page50'>50</a> === <a class='magic' name='#_'>magic number</a> BASIC_TYPE_APPLESOFT_ROM = $40
-1DAE:8D B6 2A       118             STA ASIBSW                                      ; <b><a class='section' name='DOSINIT.118.Solution'>Solution</a></b>: a) Lines 117-118 should be moved <i>after</i> Line #<a class='line' href='#DOSINIT.103'>103</a> to <b>anticipate the common case</b>
+1DAE:8D B6 2A       118             STA <a class='v' href='#ASIBSW'>ASIBSW</a>                                      ; <b><a class='section' name='DOSINIT.118.Solution'>Solution</a></b>: a) Lines 117-118 should be moved <i>after</i> Line #<a class='line' href='#DOSINIT.103'>103</a> to <b>anticipate the common case</b>
                                                                                     ;           b) This is one of those <b>rare times</b> where we
                                                                                     ;              <b>padd IBVT</b> (with 2 bytes data on the end)
                                                                                     ;              to make IBVT, AS1VT, and AS2VT all the <b>same length</b>
@@ -1309,56 +1309,56 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ; 2C               DB  $2C              ; BIT $adr to skip next instruction
                                                                                     ;
                                                                                     ; A2 0C    IAS1    LDX #AS1VT-IBVTL     ;     SourceOffset $C = AS1VT 
-1DB1:A2 0C          119             LDX #AS1VTL                                     ; A0 00            LDY #0               ; Y = DestOffset = BytesCopied
-1DB3:BD 6B 1D       120 IAS1A       LDA AS1VT-1,X   ; MOVE ROM AS ADRS              ; BD 62 1D 1AS1A   LDA IBVT,X           ; X = $0, $C, or $18 to start 
-1DB6:9D 55 1D       121             STA IBASVT-1,X                                  ; 99 56 1D         STA IBASVT,Y                                       
+1DB1:A2 0C          119             LDX #<a class='v' href='#AS1VTL'>AS1VTL</a>                                     ; A0 00            LDY #0               ; Y = DestOffset = BytesCopied
+1DB3:BD 6B 1D       120 IAS1A       LDA <a class='v' href='#AS1VT'>AS1VT</a>-<span class='n'>1</span>,X   ; MOVE ROM AS ADRS              ; BD 62 1D 1AS1A   LDA IBVT,X           ; X = $0, $C, or $18 to start 
+1DB6:9D 55 1D       121             STA <a class='v' href='#IBASVT'>IBASVT</a>-<span class='n'>1</span>,X                                  ; 99 56 1D         STA IBASVT,Y                                       
 1DB9:CA             122             DEX                                             ; E8               INX                                                
-1DBA:D0 F7          123             BNE IAS1A                                       ; C8               INY                                                
+1DBA:D0 F7          123             BNE <a class='x' href='#IAS1A'>IAS1A</a>                                       ; C8               INY                                                
                                                                                     ; C0 0C            CPY #C                                             
                                                                                     ; D0 F4            BNE copy                                           
                     124 ;
                     125 INITAA      EQU                                             ; /sarcasm Hey, we need a new label inbetween INITA, and INITB
 1DBC:38             126             SEC             ; INDICATE INIT                 ;          I know, let's call it crappy "INITAA" instead of DoneCopyBasicVectors
-                    127             BCS INITA                                       ; &darr; (always) (*note* Intentional next empty line spacer for readability)
+1DBD:B0 12          127             BCS <a class='x' href='#INITA'>INITA</a>                                       ; &darr; (always) (*note* Intentional next empty line spacer for readability)
                                                                                     ;
-                    128 <a class='f' name='DBRST'>DBRST       </a>LDA ASIBSW      ;GET APPLESOFT/INITGER BASIC FLAG   ; *spelling* INTEGER; DBRST = DosBasicReset
-                    129             BNE INITA1      ;BRANCH IF NOT INITGER BASIC        ; *spelling* INTEGER
-                    130             LDA #ITSTV      ;GET INTIGER TEST VALUE AND GO SET  ; *spelling* INTEGER
-                    131             BNE INITA2      ; ROM SWITCH TO 'IB'. (BRANCH ALWAYS)
-                    132 INITA1      ASL A           ;TEST FOR ROM APPLESOFT         ; $40 = Applesoft RAM
-                    133             BPL INITA3      ;BRANCH IF RAM VERSION          ; /cynical <b>Test time!</b> INITA3 referes to InitApplesoftRAM or InitApplesoftROM ?
-                    134             LDA #ATSTV      ;GET APPLESOFT TEST VALUE AND GO SET
-                    135 INITA2      JSR SWTST       ;GO SELECT PROPER ROM BASIC.    ; more crappy naming: _which_ Switch Test
-                    136 INITA3      CLC
+1DBF:AD 62 2A       128 <a class='f' name='DBRST'>DBRST       </a>LDA ASIBSW      ;GET APPLESOFT/INITGER BASIC FLAG   ; *spelling* INTEGER; DBRST = DosBasicReset
+1DC2:D0 04          129             BNE <a class='x' href='#INITA1'>INITA1</a>      ;BRANCH IF NOT INITGER BASIC        ; *spelling* INTEGER
+1DC4:A9 20          130             LDA #ITSTV      ;GET INTIGER TEST VALUE AND GO SET  ; *spelling* INTEGER
+1DC6:D0 05          131             BNE <a class='x' href='#INITA2'>INITA2</a>      ; ROM SWITCH TO 'IB'. (BRANCH ALWAYS)
+1DC8:0A             132 INITA1      ASL A           ;TEST FOR ROM APPLESOFT         ; $40 = Applesoft RAM
+1DC9:10 05          133             BPL <a class='x' href='#INITA3'>INITA3</a>      ;BRANCH IF RAM VERSION          ; /cynical <b>Test time!</b> INITA3 referes to InitApplesoftRAM or InitApplesoftROM ?
+1DCB:A9 4C          134             LDA #ATSTV      ;GET APPLESOFT TEST VALUE AND GO SET
+1DCD:20 B2 25       135 INITA2      JSR <a class='x' href='#SWTST'>SWTST</a>       ;GO SELECT PROPER ROM BASIC.    ; more crappy naming: _which_ Switch Test
+1DD0:18             136 INITA3      CLC
                     137 ;
                     138 INITA       EQU *
-                    139             PHP             ;SAVE INIT/RESET
-                    140             JSR MVCSW       ; GO MOVE CHAR SWITCH
-                    141             LDA #0          ; CLR MONITOR MODES             ; MON C,I,O
-                    142             STA MONMOD
+1DD1:08             139             PHP             ;SAVE INIT/RESET
+1DD2:20 51 28       140             JSR <a class='x' href='#MVCSW'>MVCSW</a>       ; GO MOVE CHAR SWITCH
+1DD5:A9 00          141             LDA #<span class='n'>0</span>          ; CLR MONITOR MODES             ; MON C,I,O
+1DD7:8D 5E 2A       142             STA MONMOD
                     143 ;
-                    144             STA OSTATE      ; CLEAR OUTSTATE AND EXECUTE STATE  ; what happened to STA ESTATE ??
-                    145             PLP             ; GET INIT/RESET
-                    146             ROR A           ; SHIFT CARRY TO MSB            ; /sarcasm Gee, if only we could understand 6502 instructions, $00 = Reset, $80 = Init
-                    147             STA ISTATE      ; SAVE INSTATE                  ; Frak-You Captain Obvious with a STA IN_STATE
-                    148             BMI INITB       ; BR IF INIT
-                    149             JMP (CONT)      ; GO TO CONTINUE ENTRY          ; No Shit, Sherlock; _what_ is the difference between CONT and GO ???
-                    150 INITB       JMP (GO)        ; GO TO GO ENTRY                ;
+1DDA:8D 52 2A       144             STA OSTATE      ; CLEAR OUTSTATE AND EXECUTE STATE  ; what happened to STA ESTATE ??
+1DDD:28             145             PLP             ; GET INIT/RESET
+1DDE:6A             146             ROR A           ; SHIFT CARRY TO MSB            ; /sarcasm Gee, if only we could understand 6502 instructions, $00 = Reset, $80 = Init
+1DDF:8D 51 2A       147             STA ISTATE      ; SAVE INSTATE                  ; Frak-You Captain Obvious with a STA IN_STATE
+1DE2:30 03          148             BMI <a class='x' href='#INITB'>INITB</a>       ; BR IF INIT
+1DE4:6C 5E 1D       149             JMP (<a class='v' href='#CONT'>CONT</a>)      ; GO TO CONTINUE ENTRY          ; No Shit, Sherlock; _what_ is the difference between CONT and GO ???
+1DE7:6C 5C 1D       150 INITB       JMP (<a class='v' href='#GO'>GO</a>)        ; GO TO GO ENTRY                ;
                     151             PAGE
                     152 INITC       EQU *                                           ; Called by <a class='x' href='#CHIN0'>CHIN0</a>
-                    153             ASL A           ; OF ISTATE NOT ON
-                    154             BPL INITD       ; THEN NOT RAM AS               ; 
-                    155             STA ASIBSW      ; SET RAM AS
-                    156             LDX #AS2VTL                                     ; more duplicate code, we should <span class='macro'>LDA #AS2VT-IBVT</span> and JSR <a class='link' href='#DOSINIT.118.Solution'>118 Solution</a> (make a subroutine)
-                    157 IAS2A       LDA AS2VT-1,X   ; MOVE RAM AS ADRS              ; <a class='mem' name='_'>wastes</a> 6 bytes, (9 - 3 for JSR SOLUTION.118)</a>
-                    158             STA IBASVT-1,X                                  ;        When you see the <b>same block of code</b> your <i>spidey sense</i> should be tingling:
-                    159             DEX                                             ;        Is there a way to refactor this common code?
-                    160             BNE IAS2A
-                    161             LDX #<span class='n'>29</span>                                         ; <a class='magic' name='_'>magic number</a> <i>better</i>: 30-1, <b>best</b>: FILENAME_MAX-1
-                    162 IAS2B       LDA FNAME2,X
+1DEA:0A             153             ASL A           ; OF ISTATE NOT ON
+1DEB:10 19          154             BPL <a class='x' href='#INITD'>INITD</a>       ; THEN NOT RAM AS               ; 
+1DED:8D 62 2A       155             STA ASIBSW      ; SET RAM AS
+1DF0:A2 0C          156             LDX #AS2VTL                                     ; more duplicate code, we should <span class='macro'>LDA #AS2VT-IBVT</span> and JSR <a class='link' href='#DOSINIT.118.Solution'>118 Solution</a> (make a subroutine)
+1DF2:BD 77 1D       157 IAS2A       LDA AS2VT-1,X   ; MOVE RAM AS ADRS              ; <a class='mem' name='_'>wastes</a> 6 bytes, (9 - 3 for JSR SOLUTION.118)</a>
+1DF5:9D 55 1D       158             STA IBASVT-1,X                                  ;        When you see the <b>same block of code</b> your <i>spidey sense</i> should be tingling:
+1DF8:CA             159             DEX                                             ;        Is there a way to refactor this common code?
+1DF9:D0 F7          160             BNE <a class='x' href='#IAS2A'>IAS2A</a>
+1DFB:A2 1D          161             LDX #<span class='n'>29</span>                                         ; <a class='magic' name='_'>magic number</a> <i>better</i>: 30-1, <b>best</b>: FILENAME_MAX-1
+1DFD:BD 93 2A       162 IAS2B       LDA FNAME2,X
                     163             STA FNAME1,X
                     164             DEX
-                    165             BPL IAS2B
+                    165             BPL <a class='x' href='#IAS2B'>IAS2B</a>
                     166 ;
                     167 INITD       EQU *
                     168             LDA DFNFTS      ; GO BUILD FILE TABS
